Move waveforms into a separate file.

--- a/index.html
+++ b/index.html
@@ -411,87 +411,87 @@
 							<div class="dropdown-menu p-0" aria-labelled-by="btn-op$-waveform">
 								<div id="op$-waveform" class="container btn-group-toggle w-100 p-0" data-toggle="buttons">
 									<label class="btn btn-dark rounded-0 w-100 active">
-										<input type="radio" name="op$-waveform" value="0" checked>
+										<input type="radio" name="op$-waveform" value="sine" checked>
 										<img src="img/wave-sine.webp" width="200" height="32" alt="Sine">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100">
-										<input type="radio" name="op$-waveform" value="1">
+										<input type="radio" name="op$-waveform" value="half_sine">
 										<img src="img/wave-half-sine.webp" width="200" height="32" alt="Half Sine">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100">
-										<input type="radio" name="op$-waveform" value="2">
+										<input type="radio" name="op$-waveform" value="abs_sine">
 										<img src="img/wave-abs-sine.webp" width="200" height="32" alt="Absolute Sine">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100">
-										<input type="radio" name="op$-waveform" value="3">
+										<input type="radio" name="op$-waveform" value="quarter_sine">
 										<img src="img/wave-pulse-sine.webp" width="200" height="32" alt="Pulse Sine">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100">
-										<input type="radio" name="op$-waveform" value="4">
+										<input type="radio" name="op$-waveform" value="odd_sine">
 										<img src="img/wave-even-sine.webp" width="200" height="32" alt="Sine, even periods only">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100">
-										<input type="radio" name="op$-waveform" value="5">
+										<input type="radio" name="op$-waveform" value="abs_odd_sine">
 										<img src="img/wave-even-abs-sine.webp" width="200" height="32" alt="Absolute Sine, even periods only">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100">
-										<input type="radio" name="op$-waveform" value="6">
+										<input type="radio" name="op$-waveform" value="square">
 										<img src="img/wave-square.webp" width="200" height="32" alt="Square">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100">
-										<input type="radio" name="op$-waveform" value="7">
+										<input type="radio" name="op$-waveform" value="sawtooth">
 										<img src="img/wave-saw.webp" width="200" height="32" alt="Sawtooth">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100">
-										<input type="radio" name="op$-waveform" value="8">
+										<input type="radio" name="op$-waveform" value="triangle">
 										<img src="img/wave-triangle.webp" width="200" height="32" alt="Triangle">
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="9">
-										Sawtooth 1+2
-									</label>
-									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="10">
+										<input type="radio" name="op$-waveform" value="pulse">
 										Pulse 25%
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="11">
+										<input type="radio" name="op$-waveform" value="square12">
 										Square 1+2
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="12">
+										<input type="radio" name="op$-waveform" value="saw12">
+										Sawtooth 1+2
+									</label>
+									<label class="btn btn-dark rounded-0 w-100 btn-led">
+										<input type="radio" name="op$-waveform" value="triangle12">
 										Triangle 1+2
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="13">
+										<input type="radio" name="op$-waveform" value="sine1234">
 										Sine 1+2+3+4
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="14">
+										<input type="radio" name="op$-waveform" value="sine12">
 										Sine 1+2
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="15">
+										<input type="radio" name="op$-waveform" value="sine13">
 										Sine 1+3
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="16">
+										<input type="radio" name="op$-waveform" value="sine14">
 										Sine 1+4
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="17">
+										<input type="radio" name="op$-waveform" value="sine15">
 										Sine 1+5
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="18">
+										<input type="radio" name="op$-waveform" value="sine16">
 										Sine 1+6
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="19">
+										<input type="radio" name="op$-waveform" value="sine17">
 										Sine 1+7
 									</label>
 									<label class="btn btn-dark rounded-0 w-100 btn-led">
-										<input type="radio" name="op$-waveform" value="20">
+										<input type="radio" name="op$-waveform" value="sine18">
 										Sine 1+8
 									</label>
 								</div>
