--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 							<tr class="operator-1">
 								<th class="align-middle text-center px-0">1</th>
 								<td>
-									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-1-1">
+									<input type="number" min="-99" max="99" value="0" class="form-control led-display" id="modulation-1-1">
 								</td>
 								<td class="operator-2"></td>
 								<td class="operator-3"></td>
@@ -265,7 +265,7 @@
 							<tr class="operator-1 operator-2">
 								<th class="align-middle text-center px-0">2</th>
 								<td>
-									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-1-2">
+									<input type="number" min="-99" max="99" value="0" class="form-control led-display" id="modulation-1-2">
 								</td>
 								<td></td>
 								<td class="operator-3"></td>
@@ -274,26 +274,26 @@
 							<tr class="operator-3">
 								<th class="align-middle text-center px-0">3</th>
 								<td class="operator-1">
-									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-1-3">
+									<input type="number" min="-99" max="99" value="0" class="form-control led-display" id="modulation-1-3">
 								</td>
 								<td class="operator-2">
-									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-2-3">
+									<input type="number" min="-99" max="99" value="0" class="form-control led-display" id="modulation-2-3">
 								</td>
 								<td>
-									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-3-3">
+									<input type="number" min="-99" max="99" value="0" class="form-control led-display" id="modulation-3-3">
 								</td>
 								<td class="operator-4"></td>
 							</tr>
 							<tr class="operator-4">
 								<th class="align-middle text-center px-0">4</th>
 								<td class="operator-1">
-									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-1-4">
+									<input type="number" min="-99" max="99" value="0" class="form-control led-display" id="modulation-1-4">
 								</td>
 								<td class="operator-2">
-									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-2-4">
+									<input type="number" min="-99" max="99" value="0" class="form-control led-display" id="modulation-2-4">
 								</td>
 								<td class="operator-3">
-									<input type="number" min="0" max="100" step="0.5" value="0" class="form-control led-display" id="modulation-3-4">
+									<input type="number" min="-99" max="99" value="0" class="form-control led-display" id="modulation-3-4">
 								</td>
 								<td></td>
 							</tr>
@@ -302,16 +302,16 @@
 									<img src="img/sound.webp" width="32" height="32" alt="Speaker">
 								</th>
 								<td class="operator-1">
-									<input type="number" min="0" max="100" step="0.5" value="100" class="form-control led-display" id="output-level-1">
+									<input type="number" min="-99" max="99" value="99" class="form-control led-display" id="output-level-1">
 								</td>
 								<td class="operator-2">
-									<input type="number" min="0" max="100" step="0.5" value="100" class="form-control led-display" id="output-level-2">
+									<input type="number" min="-99" max="99" value="99" class="form-control led-display" id="output-level-2">
 								</td>
 								<td class="operator-3">
-									<input type="number" min="0" max="100" step="0.5" value="100" class="form-control led-display" id="output-level-3">
+									<input type="number" min="-99" max="99" value="99" class="form-control led-display" id="output-level-3">
 								</td>
 								<td class="operator-4">
-									<input type="number" min="0" max="100" step="0.5" value="100" class="form-control led-display" id="output-level-4">
+									<input type="number" min="-99" max="99" value="99" class="form-control led-display" id="output-level-4">
 								</td>
 							</tr>
 						</table>
