--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
 						</table>
 					</div>
 					<div class="align-middle text-center">
-						<label class="my-0" for="overdrive">Overdrive</label>
-						<input type="number" min="0" value="3" step="0.02" class="form-control led-display mx-2 d-inline" id="overdrive" style="max-width: 100px">
+						<label class="my-0" for="distortion">Distortion</label>
+						<input type="number" min="0" value="3" step="0.02" class="form-control led-display mx-2 d-inline" id="distortion" style="max-width: 100px">
 						<button type="button" class="btn btn-info" id="btn-normalize-levels">
 							Normalize
 						</button>
