--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Mega Drone</title>
+	<title>ModElation - Elizabeth Instruments</title>
 	<script src="lib/jquery-3.6.0.slim.min.js" defer></script>
 	<script src="lib/bootstrap.bundle.min.js" defer></script>
 	<script src="js/ui.js" type="module"></script>
@@ -246,7 +246,7 @@
 				</fieldset>
 				<fieldset class="panel">
 					<h1>LFO</h1>
-					<div class="row">
+					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="lfo-rate-slider">
 							Frequency
 						</label>
@@ -298,14 +298,14 @@
 					</div>
 					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="lfo-fade-slider">
-							Attack
+							Fade
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="8.1" value="0" step="0.1" class="form-control-range mt-1" id="lfo-fade-slider">
+							<input type="range" min="-7" max="7" value="0" step="0.1" class="form-control-range mt-1" id="lfo-fade-slider">
 						</div>
 						<div class="col-5 col-md-3 pr-md-4">
 							<div class="input-group">
-								<input type="number" min="0" max="9.9" step="0.1" value="0" class="form-control led-display" id="lfo-fade">
+								<input type="number" min="-9.9" max="9.9" step="0.1" value="0" class="form-control led-display" id="lfo-fade">
 								<div class="input-group-append">
 									<span class="input-group-text led-label">s</span>
 								</div>
@@ -374,7 +374,7 @@
 								Resonance
 							</label>
 							<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-								<input type="range" min="-24" max="24" step="0.1" value="0" class="form-control-range mt-1" id="filter-q-slider">
+								<input type="range" min="0" max="12" step="0.1" value="0" class="form-control-range mt-1" id="filter-q-slider">
 							</div>
 							<div class="col-5 col-md-3 pr-md-4">
 								<div class="input-group">
@@ -559,7 +559,7 @@
 							<img src="img/adsr.svg" width="375" height="216" alt="ADSR envelope">
 						</div>
 					</div>
-					<div class="row">
+					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="op$-rate-scale-slider">
 							Rate Scaling
 						</label>
@@ -571,52 +571,14 @@
 						</div>
 					</div>
 					<div class="row form-group">
-						<div class="d-none d-md-block col-3"></div>
-						<div class="col-auto pl-md-0">
-							<div class="form-check small">
-								<input type="checkbox" id="op$-rate-scale-free" class="form-check-input">
-								<label for="op$-rate-scale-free" class="form-check-label">
-									Free Choice
-								</label>
-							</div>
-						</div>
-					</div>
-					<div class="row form-group">
-						<div class="col-auto col-md-3 my-auto">
-							<div class="form-check">
-								<input type="radio" name="op$-velocity-sensitive" id="op$-not-velocity-sensitive" class="form-check-input" checked>
-								<label for="op$-not-velocity-sensitive" class="form-check-label">
-									Fixed Minimum Attenuation <small>(L1)</small>
-								</label>
-							</div>
-						</div>
+						<label class="col-auto col-md-3 col-form-label" for="op$-total-level-slider">
+							Min Attenuation <small>(L1)</small>
+						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="op$-attenuation-slider">
-							<div class="form-check small mt-2">
-								<input type="checkbox" id="op$-attenuation-free" class="form-check-input">
-								<label for="op$-multiple-free" class="form-check-label">
-									Free Choice
-								</label>
-							</div>
+							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="op$-total-level-slider">
 						</div>
 						<div class="col-4 col-md-2">
-							<input type="number" min="-127" max="127" value="0" class="form-control led-display" id="op$-attenuation" disabled>
-						</div>
-					</div>
-					<div class="row form-group">
-						<div class="col-auto col-md-3 my-auto">
-							<div class="form-check">
-								<input type="radio" name="op$-velocity-sensitive" id="op$-velocity-sensitive" class="form-check-input">
-								<label for="op$-velocity-sensitive" class="form-check-label">
-									Velocity Sensitive
-								</label>
-							</div>
-						</div>
-						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="op$-key-velocity-slider">
-						</div>
-						<div class="col-4 col-md-2">
-							<input type="number" min="0" max="127" value="0" class="form-control led-display" id="op$-key-velocity">
+							<input type="number" min="-127" max="127" value="0" class="form-control led-display" id="op$-total-level" disabled>
 						</div>
 					</div>
 					<div class="row form-group">
@@ -624,10 +586,10 @@
 							Attack Rate <small>(R1)</small>
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="1" max="31" value="16" class="form-control-range mt-1" id="op$-attack-slider">
+							<input type="range" min="1" max="31" value="31" class="form-control-range mt-1" id="op$-attack-slider">
 						</div>
 						<div class="col-4 col-md-2">
-							<input type="number" value="16" class="form-control led-display" id="op$-attack" disabled>
+							<input type="number" value="31" class="form-control led-display" id="op$-attack" disabled>
 						</div>
 					</div>
 					<div class="row form-group">
@@ -641,26 +603,15 @@
 							<input type="number" value="0" class="form-control led-display" id="op$-decay" disabled>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="op$-sustain-slider">
-							Sustain Attenuation <small>(L2)</small>
+							Sustain <small>(L2)</small>
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
 							<input type="range" min="0" max="16" value="0" class="form-control-range mt-1" id="op$-sustain-slider">
 						</div>
 						<div class="col-4 col-md-2">
-							<input type="number" min="0" max="16" step="0.1" value="0" class="form-control led-display" id="op$-sustain" disabled>
-						</div>
-					</div>
-					<div class="row form-group">
-						<div class="d-none d-md-block col-3"></div>
-						<div class="col-auto pl-md-0">
-							<div class="form-check small">
-								<input type="checkbox" id="op$-sustain-free" class="form-check-input">
-								<label for="op$-sustain-free" class="form-check-label">
-									Free Choice
-								</label>
-							</div>
+							<input type="number" min="0" max="16" step="0.125" value="0" class="form-control led-display" id="op$-sustain" disabled>
 						</div>
 					</div>
 					<div class="row form-group">
@@ -674,24 +625,41 @@
 							<input type="number" value="0" class="form-control led-display" id="op$-sustain-rate" disabled>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row form-group">
 						<label class="col-auto col-md-3 col-form-label" for="op$-release-slider">
 							Release <small>(R4)</small>
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="15" value="8" class="form-control-range mt-1" id="op$-release-slider">
+							<input type="range" min="0" max="15" value="15" class="form-control-range mt-1" id="op$-release-slider">
 						</div>
 						<div class="col-4 col-md-2">
-							<input type="number" value="8" class="form-control led-display" id="op$-release" disabled>
+							<input type="number" value="15" class="form-control led-display" id="op$-release" disabled>
+						</div>
+					</div>
+					<div class="row form-group">
+						<label class="col-auto col-md-3 col-form-label" for="op$-key-velocity-slider">
+							Velocity Sensitivity
+						</label>
+						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="-45" max="45" value="0" class="form-control-range mt-1" id="op$-key-velocity-slider">
+						</div>
+						<div class="col-4 col-md-2">
+							<input type="number" value="0" class="form-control led-display" id="op$-key-velocity" disabled>
 						</div>
 					</div>
 					<div class="row form-group">
 						<div class="d-none d-md-block col-3"></div>
 						<div class="col-auto pl-md-0">
-							<div class="form-check small">
-								<input type="checkbox" id="op$-release-free" class="form-check-input">
-								<label for="op$-release-free" class="form-check-label">
-									Free Choice
+							<div class="form-check form-check-inline small">
+								<input type="checkbox" id="op$-rates-free" class="form-check-input">
+								<label for="op$-rates-free" class="form-check-label">
+									Free choice of rates
+								</label>
+							</div>
+							<div class="form-check form-check-inline small">
+								<input type="checkbox" id="op$-levels-free" class="form-check-input">
+								<label for="op$-levels-free" class="form-check-label">
+									Free choice of levels
 								</label>
 							</div>
 						</div>
