--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 						</div>
 						<div class="col-6 col-md-3 pr-md-4">
 							<div class="input-group">
-								<input type="number" min="0" max="99.9" step="0.2" value="0" class="form-control led-display" id="lfo-rate" disabled>
+								<input type="number" min="0" max="99.9" step="0.2" value="0.00" class="form-control led-display" id="lfo-rate" disabled>
 								<div class="input-group-append">
 									<span class="input-group-text led-label">Hz</span>
 								</div>
@@ -325,7 +325,7 @@
 							Delay
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="99" value="0" class="form-control-range mt-1" id="lfo-delay-slider">
+							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="lfo-delay-slider">
 						</div>
 						<div class="col-6 col-md-3 pr-md-4">
 							<div class="input-group">
@@ -341,7 +341,7 @@
 							Fade
 						</label>
 						<div class="col-12 col-md-6 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="99" value="0" class="form-control-range mt-1" id="lfo-fade-slider">
+							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="lfo-fade-slider">
 						</div>
 						<div class="col-6 col-md-3 pr-md-4">
 							<div class="input-group">
@@ -378,7 +378,7 @@
 						</div>
 						<div class="col-6 col-md-3 pr-md-4">
 							<div class="input-group">
-								<input type="number" min="-999.9" max="999.9" step="0.1" value="0" class="form-control led-display" id="vibrato" disabled>
+								<input type="number" min="-999" max="999" value="0" class="form-control led-display" id="vibrato" disabled>
 								<div class="input-group-append">
 									<span class="input-group-text led-label">cents</span>
 								</div>
